router modification, authorization and role based access control
