# docs/swagger.yaml
@@ -58,7 +58,7 @@ host: localhost:8080
 info:
   contact: {}
   description: This is an API for managing coupons.
-  title: My API
+  title: Coupon Service API
   version: "1.0"
 paths:
   /coupon:
@@ -81,10 +81,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/pkg.Error'
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "409":
           description: Conflict
           schema:
             $ref: '#/definitions/pkg.Error'
+      security:
+      - BearerAuth: []
       summary: Create a new coupon
       tags:
       - coupons
@@ -112,10 +118,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/pkg.Error'
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "404":
           description: Not Found
           schema:
             $ref: '#/definitions/pkg.Error'
+      security:
+      - BearerAuth: []
       summary: Apply a coupon to a basket
       tags:
       - coupons
@@ -145,10 +157,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/pkg.Error'
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "404":
           description: Not Found
           schema:
             $ref: '#/definitions/pkg.Error'
+      security:
+      - BearerAuth: []
       summary: Get coupons by codes
       tags:
       - coupons
